package com.irina.myfirstgame.stats;

import com.irina.myfirstgame.entities.wormy.Wormy;

/**
 * Effet de statut ralentissement qui réduit la vitesse du ver.
 * <p>
 * Stub pour une fonctionnalité future de ralentissement.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class Slow extends StatusEffect {
    private float speedMultiplier;
    
    @Override
    public void apply(Wormy target) {
    }
    
    @Override
    public void end(Wormy target) {
    }
}

