package com.irina.myfirstgame.stats;

import com.irina.myfirstgame.entities.wormy.Wormy;

/**
 * Effet de statut empoisonnement qui inflige des dégâts au ver.
 * <p>
 * Stub pour une fonctionnalité future d'empoisonnement.
 * </p>
 *
 * @author Irina
 * @version 1.0
 * @since 1.0
 */
public class Poison extends StatusEffect {
    private int damagePerSecond;
    
    @Override
    public void apply(Wormy target) {
    }
    
    @Override
    public void update(float delta) {
    }
}

